--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: page
 title: Work in progress
 subtitle: The Postgres Compare blog
+redirect_to:
+  - http://www.github.com
 ---
 
 <div class="posts-list">
