--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
----
-layout: page
-title: Work in progress
-subtitle: The Postgres Compare blog
-redirect_to:
-  - http://www.github.com
----
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting...</title>
+<meta http-equiv="refresh" content="0; url=www.github.com">
+<h1>Redirecting...</h1>
+<a href="/docs/home/">Click here if you are not redirected.</a>
+<script>location="/docs/home/"</script>
