--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <meta http-equiv="refresh" content="0; url=www.github.com">
 <h1>Redirecting...</h1>
 <a href="/docs/home/">Click here if you are not redirected.</a>
-<script>location="/docs/home/"</script>
+<script>location="www.github.com"</script>
