--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <title>Redirecting...</title>
 <meta http-equiv="refresh" content="0; url=www.github.com">
 <h1>Redirecting...</h1>
-<a href="/docs/home/">Click here if you are not redirected.</a>
+<a href="www.github.com">Click here if you are not redirected.</a>
 <script>location="www.github.com"</script>
