--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; url=www.github.com">
-<h1>Redirecting...</h1>
-<a href="www.github.com">Click here if you are not redirected.</a>
-<script>location="www.github.com"</script>
+---
+redirect_to: "http://www.github.com"
+---
