--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
----
-redirect_to: "http://www.github.com"
----
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting...</title>
+<link rel="canonical" href="http://www.postgrescompare.com/blog">
+<meta http-equiv="refresh" content="0; url=http://www.postgrescompare.com/blog">
+<h1>Redirecting...</h1>
+<a href="http://www.postgrescompare.com/blog">Click here if you are not redirected.</a>
+<script>location="http://www.postgrescompare.com/blog"</script>
